Add extraction engine, SQLite database, and API routes for receipts

--- a/minimal-api-dev-v7.0.0/.gitignore
+++ b/minimal-api-dev-v7.0.0/.gitignore
@@ -35,3 +35,11 @@ build
 .vscode
 tsconfig.tsbuildinfo
 .ncurc.js
+
+# SQLite database
+data/*.db
+data/*.db-shm
+data/*.db-wal
+
+# Uploads
+public/uploads/
